# crowe-lang

./: .npmignore  CHANGELOG.md  CONTINUOUS_DEVELOPMENT_ROADMAP.md  CONTRIBUTING.md  CROWELANG_SPEC.md  CROWETRADE_INTEGRATION.md  Cargo.toml  LOGO_INSTRUCTIONS.md  MANUAL_PUBLISH_INSTRUCTIONS.md  MARKETPLACE_PUBLISHING.md  MONETIZATION_STRATEGY.md  PUBLISHING_GUIDE.md  PUBLISH_COMMAND.txt  PUBLISH_NOW.md  QUICK_START_MONETIZATION.md  README.md  crowe-lang-0.2.0-final.vsix  crowe-lang-0.2.0.vsix  crowe-lang-vscode-0.2.0.vsix  crowelang-1.0.0.tgz  jest.config.js  package-lock.json  package.json  test.crowe  tsconfig.json
.crowe-cache/: cache.json
.github/workflows/: ci.yml  continuous-integration.yml  docs.yml  release.yml
crowe-cloud/: .env.example  package.json
crowe-cloud/src/: server.ts
crowe-cloud/src/models/: User.model.ts
crowe-cloud/src/services/: stripe.service.ts
docs/: index.html  playground.html
examples/: Assign.tsx  Dashboard.tsx  Hello.tsx  compiled-strategy-example.ts  example-strategy.ts  simple-backtest-example.ts
examples/hmr-demo/: index.html  package.json  vite.config.ts
python/crowelang.egg-info/: PKG-INFO
scripts/: benchmark.js  publish-extension.sh
test/: integration.test.ts
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  crowe-lang-0.2.0.vsix  crowe-lang-0.2.1.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/icons/: icon.png.base64
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: crowe.tmLanguage.json
website/: pricing.html
